# filesift

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: generate-tauri-updater-key.yml  release.yml
docs/: github-desktop-build.md  release-checklist.md
python/: analyzer.py  cli.py  models.py  requirements.txt  test_analyzer.py  test_models.py
src/: App.tsx  Root.tsx  main.tsx  settings.css  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
test-fixtures/: board-minutes-sample.txt  invoice-sample.txt  nda-sample.txt
